# goit-pythonweb-hw-12

./: README.md
contacts/: .env  .env.test  alembic.ini  main.py  pyproject.toml
contacts/docs/: conf.py
contacts/docs/_build/doctrees/: environment.pickle  index.doctree
contacts/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
contacts/docs/_build/html/_sources/: index.rst.txt
contacts/migrations/: env.py
contacts/migrations/versions/: 3ea1f8d78ecf_initial_migration.py  a504846ea815_initial_migration.py  c39800e072ef_initial_migration.py  f5f4cdbacdc5_add_to_model_user_filed_confirmed.py  fcfc9d557040_initial_migration.py
contacts/src/: .coverage  schemas.py  test.db
contacts/src/api/: auth.py  contacts.py  users.py  utils.py
contacts/src/conf/: config.py
contacts/src/database/: models.py
contacts/src/repository/: contacts.py  users.py
contacts/src/services/: auth.py  contacts.py  email.py  users.py
contacts/src/services/templates/: reset_password.html
contacts/tests/: conftest.py  test_auth.py  test_contact_repository_unit.py  test_db.py  test_email.py  test_integration_auth.py  test_integration_users.py  test_user_repository_unit.py  test_utils.py
