[tool.poetry]
name = "contacts"
version = "0.1.0"
description = ""
authors = ["ArthurMykhailiuk <artur.myhajlyuk@volo.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.5"
alembic = "^1.14.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
